move zabbix backend to MAN

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -81,17 +81,9 @@ bind_zones:
           - "factorio"
           - "valheim"
           - "valheim.hogs"
-      - name: "server.zabbix.hogs"
-        ip: "10.117.0.32"
-        ipv6: "fd36:3eb3:43b0:75::20"
-        aliases:
-          - "zabbix-server.hogs"
       - name: "zabbix.hogs"
         ip: "10.117.0.33"
         ipv6: "fd36:3eb3:43b0:75::21"
-      - name: "snmp.zabbix.hogs"
-        ip: "10.117.0.34"
-        ipv6: "fd36:3eb3:43b0:75::22"
       - name: "maccabeus01.hogs"
         ip: "10.117.0.48"
         ipv6: "fd36:3eb3:43b0:75::30"
@@ -128,6 +120,12 @@ bind_zones:
       - name: "ipmi.dadab.hogs"
         ip: "10.10.0.11"
         ipv6: "fd36:3eb3:43b0:a::b"
+      - name: "server.zabbix.hogs"
+        ip: "10.10.0.18"
+        ipv6: "fd36:3eb3:43b0:a::12"
+      - name: "snmp.zabbix.hogs"
+        ip: "10.10.0.19"
+        ipv6: "fd36:3eb3:43b0:a::13"
       - name: "sdwilsh-dev.hogs"
         ip: "10.10.0.20"
         ipv6: "fd36:3eb3:43b0:a::14"
