--- a/roles/docker-zabbix-backend/tasks/main.yml
+++ b/roles/docker-zabbix-backend/tasks/main.yml
@@ -5,14 +5,14 @@
     project_name: "zabbix_backend"
     definition:
       networks:
-        home:
+        man:
           external:
-            name: "home"
+            name: "man"
       services:
         server:
           dns:
-            - "10.117.0.1"
-            - "fd36:3eb3:43b0:75::1"
+            - "10.10.0.1"
+            - "fd36:3eb3:43b0:a::1"
           environment:
             DB_SERVER_HOST: "mysql.hogs.tswn.us"
             MYSQL_USER: "zabbix"
@@ -20,9 +20,9 @@
           image: "zabbix/zabbix-server-mysql:alpine-5.4-latest"
           mac_address: "02:42:0a:75:00:20"
           networks:
-            home:
-              ipv4_address: "10.117.0.32"
-              ipv6_address: "fd36:3eb3:43b0:75::20"
+            man:
+              ipv4_address: "10.10.0.18"
+              ipv6_address: "fd36:3eb3:43b0:a::12"
           ports:
             - "10051:10051"
           stop_grace_period: "30s"
@@ -33,14 +33,14 @@
             - "snmptraps:/var/lib/zabbix/snmptraps:rw"
         snmptraps:
           dns:
-            - "10.117.0.1"
-            - "fd36:3eb3:43b0:75::1"
+            - "10.10.0.1"
+            - "fd36:3eb3:43b0:a::1"
           image: "zabbix/zabbix-snmptraps:alpine-5.4-latest"
           mac_address: "02:42:0a:75:00:21"
           networks:
-            home:
-              ipv4_address: "10.117.0.34"
-              ipv6_address: "fd36:3eb3:43b0:75::22"
+            man:
+              ipv4_address: "10.10.0.19"
+              ipv6_address: "fd36:3eb3:43b0:a::13"
           ports:
             - "162:162/udp"
           stop_grace_period: "5s"
