--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -2,6 +2,12 @@
 - include: iscsi.yml
 
 # Networking
+- name: "Set hostname"
+  ansible.builtin.hostname:
+    name: "{{ inventory_hostname[0:-13] }}"
+  when: "'hogs.tswn.us' in inventory_hostname"
+  tags:
+    - "networking"
 - name: "Remove netplan.io"
   ansible.builtin.apt:
     name: "netplan.io"
