--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -122,7 +122,9 @@ bind_zones:
         ipv6: "fd36:3eb3:43b0:a::b"
       - name: "server.zabbix.hogs"
         ip: "10.10.0.18"
-        ipv6: "fd36:3eb3:43b0:a::12"
+        ipv6:
+          - "fd36:3eb3:43b0:a:42:aff:fe75:20" # Docker container prefers this.
+          - "fd36:3eb3:43b0:a::12"
       - name: "snmp.zabbix.hogs"
         ip: "10.10.0.19"
         ipv6: "fd36:3eb3:43b0:a::13"
