--- a/vyos.yml
+++ b/vyos.yml
@@ -1043,6 +1043,17 @@
                     destination:
                       address: "255.255.255.255"
                       port: "4680"
+                  - number: 100
+                    description: "Allow Zabbix SNMP Connections ({{ ansible_managed }})"
+                    action: "accept"
+                    protocol: "tcp_udp"
+                    state:
+                      new: true
+                    destination:
+                      port: "161"
+                    source:
+                      group:
+                        address_group: "ZABBIX-SERVER-v4"
               - name: "LOCAL-from-NOWAN-v4"
                 description: "{{ ansible_managed }}"
                 enable_default_log: yes
@@ -2630,3 +2641,16 @@
       tags:
         - services
         - router-advert
+
+    - name: "Setup snmp"
+      vyos.vyos.vyos_config:
+        lines:
+          - "set service snmp listen-address 10.10.0.{{ vyos__host_id_ipv4 }}"
+          - "set service snmp listen-address fd36:3eb3:43b0:a::{{ vyos__host_id_ipv6 }}"
+          - "set service snmp trap-target 10.10.0.19"
+          - "set service snmp community hogs authorization ro"
+          - "set service snmp community hogs client 10.10.0.18"
+        save: yes
+      tags:
+        - "services"
+        - "snmp"
