Update ups dns information

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -108,9 +108,6 @@ bind_zones:
         ipv6: "fd36:3eb3:43b0:a::4"
         aliases:
           - "ns2"
-      - name: "ups01.hogs"
-        ip: "10.10.0.5"
-        ipv6: "fd36:3eb3:43b0:a::5"
       - name: "docker-vm.hogs"
         ip: "10.10.0.6"
         ipv6: "fd36:3eb3:43b0:a::6"
@@ -131,6 +128,15 @@ bind_zones:
       - name: "sdwilsh-dev.hogs"
         ip: "10.10.0.20"
         ipv6: "fd36:3eb3:43b0:a::14"
+      - name: "ups01.hogs"
+        ip: "10.10.0.30"
+        ipv6: "fd36:3eb3:43b0:a::1f"
+      - name: "ups02.hogs"
+        ip: "10.10.0.31"
+        ipv6: "fd36:3eb3:43b0:a::20"
+      - name: "power-failover"
+        ip: "10.10.0.32"
+        ipv6: "fd36:3eb3:43b0:a::21"
       # Services
       - name: "installation02"
         ip: "10.82.0.2"
