--- a/vyos.yml
+++ b/vyos.yml
@@ -2431,6 +2431,31 @@
               start: "10.1.0.150"
               stop: "10.1.0.250"
             subnet: "10.1.0.0/24"
+            static_mapping:
+              - name: "usw-pro-48"
+                ip: "10.1.0.11"
+                mac: "74:83:c2:4a:ff:e6"
+              - name: "flex-porch"
+                ip: "10.1.0.30"
+                mac: "74:83:c2:49:e6:2c"
+              - name: "flex-office-sdwilsh"
+                ip: "10.1.0.31"
+                mac: "74:83:c2:49:e6:4d"
+              - name: "flex-mini-office"
+                ip: "10.1.0.32"
+                mac: "74:83:c2:ff:8f:eb"
+              - name: "den-ap"
+                ip: "10.1.0.50"
+                mac: "78:8a:20:0f:45:b0"
+              - name: "living-ap"
+                ip: "10.1.0.51"
+                mac: "78:8a:20:ff:1c:0c"
+              - name: "kitchen-ap"
+                ip: "10.1.0.52"
+                mac: "78:8a:20:0f:e4:84"
+              - name: "upper-hallway-ap"
+                ip: "10.1.0.53"
+                mac: "fc:ec:da:79:81:6c"
           - name: "MAN"
             default_router: "10.10.0.1"
             own_dns: true
