enable snmp traps for zabbix

--- a/roles/docker-zabbix-backend/tasks/main.yml
+++ b/roles/docker-zabbix-backend/tasks/main.yml
@@ -17,6 +17,7 @@
             DB_SERVER_HOST: "mysql.hogs.tswn.us"
             MYSQL_USER: "zabbix"
             MYSQL_PASSWORD: "{{ hostvars['mysql.hogs.tswn.us'].mysql_server__users | selectattr('name', 'equalto', 'zabbix') | map(attribute='password') | first }}"
+            ZBX_ENABLE_SNMP_TRAPS: "true"
           image: "zabbix/zabbix-server-mysql:alpine-5.4-latest"
           mac_address: "02:42:0a:75:00:20"
           networks:
@@ -46,6 +47,7 @@
             - "162:162/udp"
           stop_grace_period: "5s"
           volumes:
+            - "/home/zabbix/mibs:/var/lib/zabbix/mibs:ro"
             - "snmptraps:/var/lib/zabbix/snmptraps:rw"
       volumes:
         snmptraps:
