make sure ansible and zabbix are always in the docker group if it is configured

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -28,3 +28,8 @@ common__nameservers:
     - hogs.tswn.us
 common__nfs_server_ip: "10.117.0.10"
 common__ntp_pool: "pool.ntp.hogs.tswn.us"
+
+# Ensure certain users are always added to the docker group.
+docker__users:
+  - "ansible"
+  - "zabbix"
