Add IPMI pollers

--- a/roles/docker-zabbix-backend/tasks/main.yml
+++ b/roles/docker-zabbix-backend/tasks/main.yml
@@ -35,6 +35,7 @@
             MYSQL_PASSWORD: "{{ hostvars['mysql.hogs.tswn.us'].mysql_server__users | selectattr('name', 'equalto', 'zabbix') | map(attribute='password') | first }}"
             ZBX_CACHESIZE: "64M"
             ZBX_ENABLE_SNMP_TRAPS: "true"
+            ZBX_IPMIPOLLERS: "2"
           image: "zabbix/zabbix-server-mysql:alpine-5.4-latest"
           mac_address: "02:42:0a:75:00:20"
           networks:
