--- a/roles/valheim/tasks/main.yml
+++ b/roles/valheim/tasks/main.yml
@@ -50,6 +50,7 @@
           volumes:
             - "/opt/valheim:/config"
     pull: yes
+    stopped: yes
   vars:
     ansible_python_interpreter: "/usr/bin/env python3-docker"
   register: status
