Update cron role to add some jitter and default to running hourly

--- a/roles/ansible-cron/defaults/main.yml
+++ b/roles/ansible-cron/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for ansible-cron
 
-# This must be defined for each host!
-ansible_cron__inventory_file: None
+ansible_cron__interval: "hourly"
+ansible_cron__inventory_file: "prod-inventory"
