--- a/loki.hogs.tswn.us.yml
+++ b/loki.hogs.tswn.us.yml
@@ -3,6 +3,8 @@
   become: yes
   roles:
     - role: "common"
+    - role: "github-client"
+    - role: "ansible-cron"
     - role: "nickjj.docker"
       tags:
         - "docker"
